# SuperSwarm

./: CMakeLists.txt  README.md
managers/: map.h  server.h  stateTracker.cpp  stateTracker.h
robots/: robotBase.cpp  robotBase.h
robots/beacon/: beacon.cpp  beacon.h  drone.cpp  drone.h
robots/miner/: miner.cpp  miner.h
robots/transport/: transporter.cpp  transporter.h
utility/: node.cpp  node.h
